Сhange checkboxes and tricks in the modular window.

--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@
           </label>
           <label class="form-label">
             <span>Коментарий</span>
-            <textarea name="comment" class="form-input comment" rows="5" cols="45"
+            <textarea name="comment" class="form-input-comment" spellcheck="false" rows="5" cols="45"
               placeholder="Введите текст"></textarea>
           </label>
         </div>
@@ -494,7 +494,7 @@
             <svg width="16" height="15">
               <use href="./images/icon/icons.svg#icon-checkbox"></use>
             </svg>
-            <span> Соглашаюсь с рассылкой и принимаю <a href>Условия договора</a>
+            <span> Соглашаюсь с рассылкой и принимаю <a href class="checkbox-link">Условия договора</a>
             </span>
           </label>
         </div>
